added edit attributes implementation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,10 +39,17 @@
     <string name="addPlayerTitle">Add Player</string>
     <string name="team">Team</string>
     <string name="addPlayerMessage">Enter details of the new player</string>
-    <string name="teamAlreadyExists">No team created. Team already exists!</string>
+    <string name="teamAlreadyExists">No team created. Team already existing!</string>
     <string name="playerNumberEmpty">No player created. Player number can\'t be empty</string>
     <string name="playerAlreadyExists">No player created. Player with entered details exists already</string>
     <string name="editTeams">Edit Teams</string>
+    <string name="editAttributesHeader_txt">Edit Attributes</string>
+    <string name="deleteAttributeTitle_txt">Delete Attribute</string>
+    <string name="deleteAttributeMessage_txt">Are you sure you want to delete the attribute %1s?</string>
+    <string name="addAttributeTitle_txt">Add Attribute</string>
+    <string name="addAttributeMessage_txt">Enter name of the event attribute</string>
+    <string name="attributeAlreadyExists">No attribute created. Attribute with the entered name exists already</string>
+    <string name="noAttributeName">No attribute created. No attribute name was specified</string>
     <plurals name="numberOfPlayers">
         <item quantity="one">%d player</item>
         <item quantity="other">%d players</item>
