added configuration activities for Event Types

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,6 +50,31 @@
     <string name="addAttributeMessage_txt">Enter name of the event attribute</string>
     <string name="attributeAlreadyExists">No attribute created. Attribute with the entered name exists already</string>
     <string name="noAttributeName">No attribute created. No attribute name was specified</string>
+    <string name="editEventTypesHeader_txt">Edit Event Types</string>
+    <string name="deleteEventTypeTitle_txt">Delete Event Type</string>
+    <string name="deleteEventTypeMessage_txt">Do you really want to delete the event type \'%1s\'?</string>
+    <string name="active">Active</string>
+    <string name="long_time_event_txt">Long Time Event:</string>
+    <string name="longTimedEventCheck_contentDesc">Is long time Event Check</string>
+    <string name="player_selection">Player Selection:</string>
+    <string name="playerSelectionCheck_contentDesc">Player Selection Allowed Checkmark</string>
+    <string name="attributes_allowed">Attributes Allowed:</string>
+    <string name="attributesAllowedCheck_contentDesc">Attributes Allowed Checkmark</string>
+    <string name="timeOffsetWithVars">Time Offset: %1$s min:sec</string>
+    <string name="minute_abbrev">minutes</string>
+    <string name="second_abbrev">seconds</string>
+    <string name="timeOffsetMinus_txt">- (subtract from event timestamp)</string>
+    <string name="timeOffsetPlus_txt">+ (add to event timestamp)</string>
+    <string name="time_offset">Time Offset</string>
+    <string name="title">Title</string>
+    <string name="long_timed_event">Long Timed Event</string>
+    <string name="enable_player_selection">Enable Player Selection</string>
+    <string name="allow_setting_attributes">Allow Setting Attributes</string>
+    <string name="save">Save</string>
+    <string name="cancel">Cancel</string>
+    <string name="addEventType">Add Event Type</string>
+    <string name="noEventTypeTitle">Please enter Event Type title before saving.</string>
+    <string name="event_type_options">Event Type Options</string>
     <plurals name="numberOfPlayers">
         <item quantity="one">%d player</item>
         <item quantity="other">%d players</item>
