--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,11 +88,19 @@
         <item quantity="one">%d player</item>
         <item quantity="other">%d players</item>
     </plurals>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="undo">Undo</string>
     <string name="start_match_tagging">Start Match Tagging</string>
     <string name="stopMatchTagging">Stop Match Tagging</string>
     <string name="noTimerStarted_TextViewValue">00:00:00 hh:mm:ss</string>
     <string name="tagCounterTextViewValue">Numer of Tags: %1d</string>
+    <string name="player_Selection_Header_Txt">Select Players for Event</string>
+    <string name="expand_icon">expand Icon</string>
+    <string name="sameTeamError">Home and away team can\'t be the same</string>
+    <string name="checkmark">checkmark</string>
+    <string name="match_event_details">Match Event Details</string>
+    <string name="save_match_event">Save Match Event</string>
+    <string name="add_attributes_optional">Add Attributes (optional)</string>
+    <string name="add_following_event_optional">Add Following Event (Optional)</string>
+    <string name="addAttributesToEventDialogTitle">Select Attributes for Event</string>
+    <string name="noFollowingEvent">No following event entered</string>
 </resources>
